# Stellink

./: CONTRIBUTING.md  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json
contracts/: Cargo.toml
contracts/paybeam-escrow/: Cargo.toml
contracts/paybeam-escrow/src/: lib.rs  test.rs
contracts/stellink-escrow/: Cargo.toml
contracts/stellink-escrow/src/: lib.rs  test.rs
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Dashboard.tsx  Header.tsx  HeroSection.tsx  LinkDetail.tsx
frontend/src/hooks/: useStellarWallet.ts
frontend/src/lib/: configAddress.ts  linkStore.ts  pocketbase.ts  stellar.ts  types.ts
frontend/src/pages/: DashboardPage.tsx  Index.tsx  PayPage.tsx
scripts/: pocketbase-schema.json  pocketbase-setup.sh
