[workspace]
resolver = "2"
members = [
  "stellink-escrow",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SustainOpen/Stellink"

[workspace.dependencies]
soroban-sdk = "21.7"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
