[package]
name = "paybeam-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PayBeam — minimal Soroban escrow registry for Stellar payment links."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
